2006-11-14 Tim
 Correct "Shell Extension in 64-bit Windows" in Known Limitations.
  Web\2.6: limitations.php
  Web\2.4: limitations.php

2006-11-01 Tim
 PATCH: [ 1586854 ] Web: Change font to Verdana
  Web\css: all.css print.css

2006-10-30 Tim
 BUG: [ 1586836 ] Web: Translation status say 2.4 is still "latest stable"
  Web\developer\l10n: status.php
 PATCH: [ 1587213 ] Web: WinMerge 2.6 favicon.ico
  Web: favicon.ico

2006-10-23 Tim
 BUG: [ 1583164 ] Mismatch in Pad-file URL and URL in PAD-file
  Web: WinMergePAD.php

2006-10-18 Tim
 BUG: [ 1580031 ] Web: Wrong link to screenshot in pad file
  Web: WinMergePAD.xml

2006-10-13 Tim
 PATCH: [ 1576903 ] Web: Changes for new stable release 2.6.0
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.2: downloads.php
  Web\2.4: index.php new file downloads.php
  Web\2.6: new file *.php *.txt
  Web\2.6\images: new file *.gif *.png
 Remove "development version" link from Known Limitations (EditBinaryFiles.dll).
  Web\2.6: limitations.php
 German translation is updated to 2.6.
  Web\developer\l10n: status.xml

2006-10-12 Tim
 PATCH: [ 1575541 ] Web: Generator for Tracker Shortcuts
  Web\developer: new file tracker-shortcuts.php

2006-10-08 Tim
 PATCH: [ 1573243 ] Web: Add info and link for developers-wiki
  Web\developer: needed.php

2006-10-07 Tim
 BUG: [ 1572388 ] Wrong link to regex.pdf
  Web: links.php
 Cool, Perry is back! :)
  Web\developer: developers.xml

2006-10-03 Tim
 PATCH: [ 1569431 ] Couple of typos in Translations -page
  Web\developer\l10n: index.php

2006-10-01 Tim
 PATCH: [ 1566474 ] Web: Improve translations index page
  Web\developer\l10n: index.php
 PATCH: [ 1566613 ] Web: Improve Developers Needed -page
  Web: page.inc
  Web\developer: needed.php
 BUG: [ 1566593 ] Download .exe file for 7-Zip Plugin
  Web: downloads.php
 Add "Vaild HTML/CSS" images again.
  Web\images: added valid-css.gif valid-html401.gif

2006-09-26 Tim
 PATCH [ 1565841 ] Web: Catalan translation is updated